Removed the deprecated constructor in ex-2